<resources>


    <string name="app_name">safood</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>


    <!--SIGN IN-->
    <string name="label_signin_top_desc">one stop quick food delivery app.</string>
    <string name="hint_signin_mobile_no">Mobile No.</string>
    <string name="hint_signin_otp">OTP</string>
    <string name="label_verify">Verify</string>
    <string name="label_or_signin_with">or sign in with</string>


    <!--HOME-->
    <string name="menu_home_search">Search</string>
    <string name="menu_home_help">Help</string>
    <string name="menu_home_support">Support</string>
    <string name="menu_home_cancel">Cancel</string>


    <!--GLOBAL-->
    <string name="contentDescription">TODO</string>


    <!--DUMMY-->
    <string name="dummy_full_address">72, 35th Main, 1st Cross, 100 Feet Ring Rd, near Central Silk Board, KAS Officers Colony, BTM 2nd Stage, Bengaluru, Karnataka 560068</string>
    <string name="dummy_address">1st Cross, 100 Feet Ring Rd, near Central Silk Board, KAS Officers Colony, BTM 2nd Stage, Bengaluru</string>
    <string name="dummy_locality">Madiwala, Bengaluru</string>
    <string name="dummy_name">Jack Sparrow</string>


</resources>